--- a/banking_system/public/stylesheets/style.css
+++ b/banking_system/public/stylesheets/style.css
@@ -2,3 +2,14 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
+#center {
+  text-align: center;
+}
+.row{
+  text-align: center;
+}
+.table-center{
+  text-align: center;
+  padding-left: 100px;
+  padding-bottom: 50px;
+}
