--- a/banking_system/public/stylesheets/style.css
+++ b/banking_system/public/stylesheets/style.css
@@ -137,3 +137,10 @@ nav ul li a{
   text-transform: uppercase;
 }
 
+.userName{
+  background-color: rgba(0,0,0,.5);
+  border-radius: 20px;
+  padding: 10px;
+  font-size: 18px;
+  
+}
